force-app/main/default/objects/Work_Order__c/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <formula>TEXT(Account__r.Account_Customer_Type__c)</formula>
    <label>Account Customer Type</label>
    <type>Text</type>
</CustomField>