force-app/main/default/objects/Work_Order__c/fields/Backend_Customer_Flag_Count__c.field-meta.xml
<CustomField>
    <fullName>Backend_Customer_Flag_Count__c</fullName>
    <formula>NOW() - Customer_Last_updated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backend Customer Flag Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>