force-app/main/default/objects/Work_Order__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>Deducted_Total_Due_Amount__c -  Total_Payment_payment__c</formula>
    <inlineHelpText>Formula : Total Amount Due</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>