force-app/main/default/objects/Work_Order__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Item__c.Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>