force-app/main/default/objects/Work_Order__c/fields/Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model__c</fullName>
    <label>Boat Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>