force-app/main/default/objects/Work_Order__c/fields/Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Boat_Year__c</fullName>
    <label>Boat Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>