force-app/main/default/objects/Work_Order__c/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &apos;Closed&apos;), ROUND(ClosedDate__c -  CreatedDate , 0), ROUND((NOW() -  CreatedDate ), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>