force-app/main/default/objects/Work_Order__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Date/TimeClosedDate</label>
    <type>DateTime</type>
</CustomField>