force-app/main/default/objects/Work_Order__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>