force-app/main/default/objects/Work_Order__c/fields/Customer_Boat_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Boat_Status__c</fullName>
    <label>Customer Boat Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Work</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>In Detail</fullName>
            </value>
            <value>
                <fullName>In Storage</fullName>
            </value>
            <value>
                <fullName>Ready for Pickup</fullName>
            </value>
            <value>
                <fullName>Ready for Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>