force-app/main/default/objects/Work_Order__c/fields/Customer_Last_updated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_updated__c</fullName>
    <label>Customer Last Updated</label>
    <type>DateTime</type>
</CustomField>