force-app/main/default/objects/Work_Order__c/fields/Customer_Notification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Flag__c</fullName>
    <formula>IMAGE( 
	IF( ISPICKVAL( Status__c ,&apos;closed&apos;)  || ISPICKVAL( Status__c ,&apos;Closed Internal&apos;) ,

		&apos;/resource/BOATBUILDING__flag_blue&apos;,
		IF(NOW() - Customer_Last_updated__c &lt;= $Setup.Trigger_Configuration__c.Customer_Notification_Frequency__c ,&apos;/resource/BOATBUILDING__flag_green&apos;,&apos;/resource/BOATBUILDING__flag_red&apos;)
	),
&apos;&apos;, 30, 30)</formula>
    <label>Customer Notification Flag</label>
    <type>Text</type>
</CustomField>