force-app/main/default/objects/Work_Order__c/fields/Deducted_Total_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deducted_Total_Due_Amount__c</fullName>
    <formula>ROUND(Total_Amt_No_Shipping__c + Sales_Tax__c + Total_Shipping_Charges__c -  Discount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Total Amount Due + Sales Tax + Total Shipping Charges</inlineHelpText>
    <label>Deducted Total Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>