force-app/main/default/objects/Work_Order__c/fields/Discount_on_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Jobs__c</fullName>
    <label>Discount on Jobs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>