force-app/main/default/objects/Work_Order__c/fields/Discount_With_Promocode__c.field-meta.xml
<CustomField>
    <fullName>Discount_With_Promocode__c</fullName>
    <formula>IF( Promo_Code__r.IsActive__c , IF(ISPICKVAL(Promo_Code__r.Discount_In__c, &apos;Amount&apos;), Promo_Code__r.Discount_Amount__c , IF(ISPICKVAL(Promo_Code__r.Discount_In__c, &apos;Percentage&apos;), ( Total_Amt_No_Shipping__c * Promo_Code__r.Discount_Percentage__c ), 0)), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount With Promocode</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>