force-app/main/default/objects/Work_Order__c/fields/Drive__c.field-meta.xml
<CustomField>
    <fullName>Drive__c</fullName>
    <label>Drive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>