force-app/main/default/objects/Work_Order__c/fields/Engineering_Req_Number__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Req_Number__c</fullName>
    <label>Engineering Req Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>