force-app/main/default/objects/Work_Order__c/fields/GST_D__c.field-meta.xml
<CustomField>
    <fullName>GST_D__c</fullName>
    <label>GST($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>