force-app/main/default/objects/Work_Order__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>