force-app/main/default/objects/Work_Order__c/fields/Inspection_Form_Number__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Form_Number__c</fullName>
    <label>Inspection Form Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>