force-app/main/default/objects/Work_Order__c/fields/Invoice_for__c.field-meta.xml
<CustomField>
    <fullName>Invoice_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice for</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Work Requests</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>