force-app/main/default/objects/Work_Order__c/fields/IsClosedOnCreate__c.field-meta.xml
<CustomField>
    <fullName>IsClosedOnCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClosedOnCreate</label>
    <type>Checkbox</type>
</CustomField>