force-app/main/default/objects/Work_Order__c/fields/isQBIDonContact__c.field-meta.xml
<CustomField>
    <fullName>isQBIDonContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQBIDonContact</label>
    <type>Checkbox</type>
</CustomField>