force-app/main/default/objects/Work_Order__c/fields/Next_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Schedule_Date__c</fullName>
    <label>Next Schedule Date</label>
    <type>DateTime</type>
</CustomField>