force-app/main/default/objects/Work_Order__c/fields/Number_of_Total_Incomplete_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Incomplete_Jobs__c</fullName>
    <label>Number of Total Incomplete Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>