force-app/main/default/objects/Work_Order__c/fields/Over_The_Phone__c.field-meta.xml
<CustomField>
    <fullName>Over_The_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over The Phone</label>
    <type>Checkbox</type>
</CustomField>