force-app/main/default/objects/Work_Order__c/fields/Overall_Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Overall_Case_Age__c</fullName>
    <formula>ClosedDate__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>