force-app/main/default/objects/Work_Order__c/fields/Part_description__c.field-meta.xml
<CustomField>
    <fullName>Part_description__c</fullName>
    <inlineHelpText>If the work request has multiple jobs please separate them with , The warranty job name must end with _w</inlineHelpText>
    <label>Work Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>