force-app/main/default/objects/Work_Order__c/fields/Parts_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Form__c</fullName>
    <label>Request Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>