force-app/main/default/objects/Work_Order__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo Code</label>
    <referenceTo>Promo_Code__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>