force-app/main/default/objects/Work_Order__c/fields/PST_D__c.field-meta.xml
<CustomField>
    <fullName>PST_D__c</fullName>
    <label>PST($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>