force-app/main/default/objects/Work_Order__c/fields/QBInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>QBInvoiceID__c</fullName>
    <label>QBWorkOrderID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>