force-app/main/default/objects/Work_Order__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User didn&apos;t attend training</fullName>
            </value>
            <value>
                <fullName>Complex functionality</fullName>
            </value>
            <value>
                <fullName>Existing problem</fullName>
            </value>
            <value>
                <fullName>Instructions not clear</fullName>
            </value>
            <value>
                <fullName>New problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>