force-app/main/default/objects/Work_Order__c/fields/Sales_Tax_Backend_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Backend_2__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Sales Tax Backend 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>