force-app/main/default/objects/Work_Order__c/fields/Sales_Tax_Backend__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Backend__c</fullName>
    <formula>Sales_Tax_on_Labor__c +  Sales_Tax_on_Parts__c +  Sales_Tax_on_Shop_Supplies__c +  Sales_Tax_on_Misc_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>