force-app/main/default/objects/Work_Order__c/fields/Sales_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Percent__c</fullName>
    <label>Sales Tax Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>