force-app/main/default/objects/Work_Order__c/fields/SendInvoiceToQB__c.field-meta.xml
<CustomField>
    <fullName>SendInvoiceToQB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Work Order To QB</label>
    <type>Checkbox</type>
</CustomField>