force-app/main/default/objects/Work_Order__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Store</fullName>
                <default>true</default>
                <label>In Store</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>