force-app/main/default/objects/Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Waiting To Schedule</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer Approval</fullName>
            </value>
            <value>
                <fullName>Warranty Waiting on Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
                <label>Waiting on Customer Drop Off</label>
            </value>
            <value>
                <fullName>Waiting on Parts</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting on Sub-let</fullName>
            </value>
            <value>
                <fullName>Waiting On Payment</fullName>
            </value>
            <value>
                <fullName>Warranty Waiting on Payment</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed Internal</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>