force-app/main/default/objects/Work_Order__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Total_Labor__c +  Total_Parts__c +  Total_Shop_Supplies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula : Calculates the Total Amount by adding Total Parts,Total Labor and Total Shop Supplies Fields.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>