force-app/main/default/objects/Work_Order__c/fields/Total_Amt_No_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_No_Shipping__c</fullName>
    <label>Total Amt No Shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>