force-app/main/default/objects/Work_Order__c/fields/Total_Misc__c.field-meta.xml
<CustomField>
    <fullName>Total_Misc__c</fullName>
    <label>Total Misc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>