force-app/main/default/objects/Work_Order__c/fields/Total_Payment_job__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_job__c</fullName>
    <inlineHelpText>Total amount (Rollup from Job)</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>