force-app/main/default/objects/Work_Order__c/fields/Total_Payment_payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_payment__c</fullName>
    <label>Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>