force-app/main/default/objects/Work_Order__c/fields/Total_Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipping_Charges__c</fullName>
    <label>Total Shipping Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>