force-app/main/default/objects/Work_Order__c/fields/Total_Shop_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Total_Shop_Supplies__c</fullName>
    <label>Total Shop Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>