force-app/main/default/objects/Work_Order__c/fields/WO_for__c.field-meta.xml
<CustomField>
    <fullName>WO_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WO for</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Work_Order__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Work Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>