force-app/main/default/objects/Work_Order__c/recordTypes/Warranty_Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Work_Order</fullName>
    <active>true</active>
    <label>Warranty Work Order</label>
</RecordType>