force-app/main/default/objects/Work_Order__c/recordTypes/Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Work_Order</fullName>
    <active>true</active>
    <label>Work Order</label>
</RecordType>