force-app/main/default/objects/Work_Order__c/recordTypes/Work_Request.recordType-meta.xml
<RecordType>
    <fullName>Work_Request</fullName>
    <active>true</active>
    <label>Work Request</label>
</RecordType>