force-app/main/default/objects/Work_Order__c/validationRules/Balance_Zero_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_Zero_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Balance__c &gt; 0  &amp;&amp; ISPICKVAL(Status__c , &apos;Closed&apos;) &amp;&amp;  RecordType.Name  &lt;&gt; &apos;Warranty Work Order&apos;</errorConditionFormula>
    <errorMessage>The work order can&apos;t be closed due to the remaining balance.</errorMessage>
</ValidationRule>