force-app/main/default/objects/Work_Order__c/validationRules/Cant_reopen_Work_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_reopen_Work_Order</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Status__c) &amp;&amp; ISPICKVAL(PRIORVALUE(Status__c),&apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>You can&apos;t reopen this work order. Please contact a System Admin or GM</errorMessage>
</ValidationRule>