force-app/main/default/objects/Work_Order__c/listViews/FAD_Open_Warranty_Work_Orders.listView-meta.xml
<ListView>
    <fullName>FAD_Open_Warranty_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Boat__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Age__c</columns>
    <columns>Customer_Notification_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Order__c.Warranty_Work_Order</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Closed Internal</value>
    </filters>
    <label>FAD Open Warranty Work Orders</label>
</ListView>